--- a/movies-server.yml
+++ b/movies-server.yml
@@ -13,6 +13,20 @@ spring:
     generate-ddl: true
     show-sql: true
 
+eureka:
+  client:
+    register-whit-eureka: true
+    fetch-registry: true
+    registry-fetch-interval-seconds: 5
+    health-check:
+      enabled: true
+    service-url:
+     default-zone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
+
 
 
 
