--- a/catalog-server.yml
+++ b/catalog-server.yml
@@ -3,3 +3,19 @@ server:
 spring:
   application:
     name: catalog-service
+
+eureka:
+  client:
+    register-whit-eureka: true
+    fetch-registry: true
+    registry-fetch-interval-seconds: 5
+    health-check:
+      enabled: true
+    service-url:
+      default-zone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
+
+
