--- a/series-service.yml
+++ b/series-service.yml
@@ -3,6 +3,13 @@ server:
 spring:
   application:
     name: serie-service
+  mongodb:
+    embedded:
+      version: 4.0.2
+  data:
+    mongodb:
+      database: test
+        port: 27017
 
 eureka:
   client:
