ajuste config mongo

--- a/series-service.yml
+++ b/series-service.yml
@@ -5,10 +5,11 @@ spring:
     name: serie-service
   mongodb:
     embedded:
-      version: 4.2.3
+      version: 4.0.2
   data:
     mongodb:
       database: test
+      host: localhost
       port: 27017
 
 eureka:
