--- a/series-service.yml
+++ b/series-service.yml
@@ -8,9 +8,11 @@ spring:
       version: 4.0.2
   data:
     mongodb:
-      database: test
-      host: localhost
-      port: 27017
+      uri: mongodb://localhost:27017
+    username: root
+    password: root
+    authentication-database: admin
+    port: 27017
 
 eureka:
   client:
