--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -8,11 +8,9 @@ spring:
       version: 4.0.2
   data:
     mongodb:
-      uri: mongodb://localhost:27018/catalog
-    username: root
-    password: root
-    authentication-database: admin
-    port: 27018
+      database: test
+      host: localhost
+      port: 27018
 
 eureka:
   client:
